@@ -40,7 +40,7 @@ install_requires=[
     'zope.configuration',
     'zope.deprecation',
     'zope.interface >= 3.5.1',  # 3.5.0 comment: "allow to bootstrap on jython"
-    'venusian >= 0.2',
+    'venusian >= 0.5', # ``codeinfo``
     'translationstring',
     ]
 
